--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-howler": "^5.2.0",
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-howler": "^5.2.0"
+    "@types/react-howler": "^5.2.0",
+    "prettier": "2.6.2"
   }
 }
