--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "jquery": "^3.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-howler": "^5.2.0",
+    "react-joystick-component": "^4.0.1",
     "react-polyglot": "^0.7.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/react-howler": "^5.2.0",
     "prettier": "2.6.2"
   }
