--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-howler": "^5.2.0",
+    "react-icons": "^4.4.0",
     "react-joystick-component": "^4.0.1",
     "react-polyglot": "^0.7.2",
     "react-scripts": "5.0.0",
