Fix paths in deployed version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "uip2-capturethefruits",
+  "homepage": "https://02jandal.github.io/UIP2-CaptureTheFruits/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
