--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install and Build
         run: |
           npm ci
-          npm run build
+          PUBLIC_URL=/UIP2-CaptureTheFruits npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
